
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int user_addr_t ;


 int WQOPS_THREAD_WORKLOOP_RETURN ;
 int errno ;
 int printf (char*,int ,int,int) ;
 int workq_kernreturn (int ,int,int,int ) ;

int main(int argc, const char * argv[]) {



    errno = 0;
    user_addr_t any_non_zero_address = 1;
    int res = workq_kernreturn(WQOPS_THREAD_WORKLOOP_RETURN, any_non_zero_address, 1, 0);

    printf("workq_kernreturn: %d - res: %d - errno: %d\n", 0, res, errno);
    return 0;
}
