; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_45891.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_45891.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@WQOPS_THREAD_WORKLOOP_RETURN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"workq_kernreturn: %d - res: %d - errno: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* @errno, align 4
  store i32 1, i32* %6, align 4
  %8 = load i32, i32* @WQOPS_THREAD_WORKLOOP_RETURN, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @workq_kernreturn(i32 %8, i32 %9, i32 1, i32 0)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @errno, align 4
  %13 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 0, i32 %11, i32 %12)
  ret i32 0
}

declare dso_local i32 @workq_kernreturn(i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
